--- a/blog_fe/public/index.html
+++ b/blog_fe/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <meta content="ie=edge" http-equiv="X-UA-Compatible" />
 
-    <title>PostList</title>
+    <title>Blog</title>
   </head>
   <body>
     <div id="app" class="container"></div>
